--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "three": "^0.178.0"
   },
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
     "vite": "^6.3.5"
