--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write # Required for OIDC
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          lfs: true # Ensure Git LFS files are checked out
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -23,9 +29,14 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          lfs: true # Enable Git LFS support
+          path: './dist' # Шлях до вашої папки збірки
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3 # Розгортає артефакт на GitHub Pages
