--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dist' # Шлях до вашої папки збірки
+          token: ${{ secrets.GITHUB_TOKEN }} # Explicitly pass the token
 
       - name: Deploy to GitHub Pages
         id: deployment
