--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} # Explicitly pass the token
 
       - name: Install Git LFS and pull files
         run: |
@@ -41,7 +43,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dist' # Шлях до вашої папки збірки
-          token: ${{ secrets.GITHUB_TOKEN }} # Explicitly pass the token
 
       - name: Deploy to GitHub Pages
         id: deployment
