--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          lfs: true # Ensure Git LFS files are checked out
+
+      - name: Install Git LFS and pull files
+        run: |
+          git lfs install
+          git config --global credential.helper store
+          echo "https://x-oauth-basic:${{ secrets.GITHUB_TOKEN }}@github.com" > ~/.git-credentials
+          git lfs pull
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -28,4 +37,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          lfs: true # Enable Git LFS support
