--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
